# nmsr-rs

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  example.config.toml  model.blend  nmsr-debug-ui.html  owo-size.html  owo.html
nmsr-3d-renderer/nmsr-player-parts/: Cargo.toml
nmsr-3d-renderer/nmsr-player-parts/src/: lib.rs  model.rs  player_model.rs  types.rs
nmsr-3d-renderer/nmsr-player-parts/src/model/: mod.rs
nmsr-3d-renderer/nmsr-player-parts/src/parts/: mod.rs  part.rs  provider.rs  tracking.rs  types.rs  utils.rs  uv.rs
nmsr-3d-renderer/nmsr-player-parts/src/parts/minecraft/: mod.rs
nmsr-3d-renderer/nmsr-player-parts/src/parts/provider/: ears.rs  ears_old.rs  minecraft.rs  mod.rs
nmsr-3d-renderer/nmsr-rendering/: Cargo.toml  render_to_image.patch
nmsr-3d-renderer/nmsr-rendering/src/: errors.rs  lib.rs
nmsr-3d-renderer/nmsr-rendering/src/high_level/: camera.rs  errors.rs  mod.rs  pipeline.rs  utils.rs
nmsr-3d-renderer/nmsr-rendering/src/high_level/pipeline/: graphics_context.rs  mod.rs  pools.rs  scene.rs  scene_context.rs  scene_internal.rs  shader.wgsl  textures.rs  wgpu_pipeline.rs
nmsr-3d-renderer/nmsr-rendering/src/low_level/: cube.rs  mesh.rs  mod.rs  primitives.rs  quad.rs  utils.rs
nmsr-3d-renderer/nmsr-wgpu-windowed/: Cargo.toml  visage-state.json
nmsr-3d-renderer/nmsr-wgpu-windowed/perspective-reverse-nmsr/state/: fullbody.json  head.json
nmsr-3d-renderer/nmsr-wgpu-windowed/src/: main.rs  shader.wgsl  uv_shader.wgsl
nmsr-aas/: Cargo.toml  build.rs  out.txt
nmsr-aas/benches/: render.rs
nmsr-aas/src/: caching.rs  config.rs  error.rs  lib.rs  main.rs  manager.rs  mojang_requests.rs  renderer.rs
nmsr-aas/src/model/: caching_v2.rs  mod.rs  resolver.rs
nmsr-aas/src/model/armor/: manager.rs  mod.rs
nmsr-aas/src/model/request/: cache.rs  entry.rs  mod.rs  mode.rs
nmsr-aas/src/model/request/cache/: entries.rs  mod.rs  (+2 more)
nmsr-aas/src/model/resolver/: default_skins.rs  geyser.rs  mod.rs
nmsr-aas/src/mojang/: caching.rs  mod.rs  requests.rs
nmsr-aas/src/routes/: bbmodel_export.rs  extractors.rs  get_skin.rs  get_skin_route.rs  index_route.rs  mod.rs  model.rs  query.rs  render.rs  render_body_route.rs  render_full_body_route.rs  render_model.rs  render_skin.rs
nmsr-aas/src/routes/static/: index.html
nmsr-aas/src/utils/: caching.rs  config.rs  error.rs  errors.rs  http_client.rs  mod.rs  nmsr_rendering_compat.rs  png.rs  tracing.rs  tracing_headers.rs  tracing_span.rs
nmsr-lib/: Cargo.toml
nmsr-lib/benches/: uv_loading.rs  uv_renderer.rs
nmsr-lib/benches/renders/: environment_background.qoi
nmsr-lib/benches/renders-jxl/: Body Layer-0.jxl  Body Layer-1.jxl  Body Layer-2.jxl  Body Layer-3.jxl  Body Layer-4.jxl  Body Layer-5.jxl  Body.jxl  environment_background.jxl
nmsr-lib/benches/renders-jxl/Alex/: Arms Layer-0.jxl  Arms Layer-1.jxl  Arms.jxl
nmsr-lib/benches/renders-jxl/Steve/: Arms Layer-0.jxl  Arms Layer-1.jxl  Arms.jxl
nmsr-lib/benches/renders-qoi/: Body Layer-0.qoi  Body Layer-1.qoi  Body Layer-2.qoi  Body Layer-3.qoi  Body Layer-4.qoi  Body Layer-5.qoi  Body.qoi
nmsr-lib/benches/renders-qoi/Alex/: Arms Layer-0.qoi  Arms Layer-1.qoi  Arms.qoi
nmsr-lib/benches/renders-qoi/Steve/: Arms Layer-0.qoi  Arms Layer-1.qoi  Arms.qoi
nmsr-lib/benches/renders-simd/Alex-Layer/: Body Layer-1.qoi  Body Layer-5.qoi
nmsr-lib/benches/renders-simd/Steve/: Body.qoi
nmsr-lib/benches/renders-simd/Steve-Layer/: Body Layer-0.qoi  Body Layer-1.qoi  Body Layer-4.qoi
nmsr-lib/benches/renders-sorted/Alex/: Body Layer-0.qoi  Body Layer-1.qoi  Body Layer-2.qoi  Body Layer-3.qoi  Body Layer-4.qoi  Body Layer-5.qoi  Body Layer-6.qoi  Body Layer-7.qoi
nmsr-lib/benches/renders-sorted/Steve/: Body Layer-0.qoi  Body Layer-1.qoi  Body Layer-10.qoi  Body Layer-2.qoi  Body Layer-3.qoi  Body Layer-4.qoi  Body Layer-5.qoi  Body Layer-6.qoi  Body Layer-7.qoi  Body Layer-8.qoi  Body Layer-9.qoi
nmsr-lib/benches/renders-sorted/a/: Body Layer-10.qoi  Body Layer-11.qoi  Body Layer-3.qoi  Body Layer-4.qoi  Body Layer-5.qoi  Body Layer-6.qoi  Body Layer-7.qoi  Body Layer-8.qoi  Body Layer-9.qoi
nmsr-lib/benches/renders/Alex/: Body Layer-2.qoi  Body Layer-3.qoi  Body.qoi
nmsr-lib/benches/renders/Steve/: Body Layer-5.qoi
nmsr-lib/src/: errors.rs  geometry.rs  lib.rs  utils.rs
nmsr-lib/src/parts/: manager.rs  mod.rs
nmsr-lib/src/parts/speedy_uv/: mod.rs
nmsr-lib/src/rendering/: ears_parts_logic.rs  entry.rs  mod.rs  parts_logic.rs  renderer.rs
nmsr-lib/src/uv/: mod.rs  part.rs  utils.rs  uv_magic.rs
utils/nmsr-parts-merger/: Cargo.toml
utils/nmsr-parts-merger/src/: main.rs
utils/nmsr-rendering-blockbench-model-generator-experiment/: Cargo.toml
utils/nmsr-rendering-blockbench-model-generator-experiment-cli/: Cargo.toml
utils/nmsr-rendering-blockbench-model-generator-experiment-cli/src/: main.rs
utils/nmsr-rendering-blockbench-model-generator-experiment-wasm/: Cargo.toml  README.md
utils/nmsr-rendering-blockbench-model-generator-experiment-wasm/.cargo/: config.toml
utils/nmsr-rendering-blockbench-model-generator-experiment-wasm/src/: lib.rs
utils/nmsr-rendering-blockbench-model-generator-experiment/src/: error.rs  generator.rs  lib.rs  main.rs
utils/nmsr-rendering-blockbench-model-generator-experiment/src/blockbench/: group_logic.rs  mod.rs  model.rs
utils/nmsr-rendering-parts-generator-experiment/: Cargo.toml
utils/nmsr-rendering-parts-generator-experiment-cli/: Cargo.toml
utils/nmsr-rendering-parts-generator-experiment-cli/src/: main.rs
utils/nmsr-rendering-parts-generator-experiment/src/: lib.rs  main.rs  nmsr-new-uvmap-shader.wgsl  nmsr-old-uvmap-shader.wgsl
utils/nmsr-skin-template-generator-experiment/: Cargo.toml
utils/nmsr-skin-template-generator-experiment/src/: main.rs
utils/nmsr-software-rasterizer/: .gitignore  Cargo.toml
utils/nmsr-software-rasterizer/.cargo/: config.toml
utils/nmsr-software-rasterizer/benches/: my_benchmark.rs  owo.txt
utils/nmsr-software-rasterizer/src/: camera.rs  lib.rs  logic.rs  main.rs  model.rs  shader.rs
(+81 files in other folders)
