[workspace]
resolver = "2"

package.license = "MIT OR Apache-2.0"
package.authors = [
    "NickAcPT"
]

package.homepage = "https://github.com/NickAcPT/nmsr-rs"

members = [
    "nmsr-lib",
    #"nmsr-jni",
    "nmsr-aas",
    "utils/nmsr-skin-template-generator-experiment",
    
    "utils/nmsr-rendering-blockbench-model-generator-experiment",
    #"utils/nmsr-rendering-blockbench-model-generator-experiment-wasm",
    "utils/nmsr-rendering-blockbench-model-generator-experiment-cli",
    
    "utils/nmsr-rendering-parts-generator-experiment",
    "utils/nmsr-rendering-parts-generator-experiment-cli",
    
    "utils/nmsr-rendering-palette-extractor",
    
    "utils/nmsr-multi-parts-organizer",
    "utils/nmsr-backfaces-optimizer",
    
    "utils/nmsr-software-rasterizer",
    
    "nmsr-3d-renderer/nmsr-player-parts",
    "nmsr-3d-renderer/nmsr-rendering",
]

[workspace.dependencies]
ears-rs = { git = "https://github.com/NickAcPT/ears-rs" }
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }
itertools = { version = "0.12" }
paste = "1.0"
wgpu = "0.20"
wgpu-types = "0.20"
bytemuck = { version = "1.15", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck"] }
image = { version = "0.25.0", default-features = false, features = ["png"] }

deadpool = { version = "0.12.1" }

tokio = { version = "1.37", features = ["sync"], default-features = false }

tracing = "0.1"
async-trait = "0.1"

derive_more = { version = "1.0.0-beta.6", features = [
    "deref",
    "deref_mut",
    "from",
    "debug",
], default-features = false }

anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
uuid = { version = "1.8", features = ["serde"] }

[profile.dev.package.image]
opt-level = 3

# Set all libraries to be optimised
[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = true

[profile.release]
opt-level = "s"
codegen-units = 1
strip = true
lto = true
panic = "abort"