[package]
name = "nmsr-lib"
version = "0.2.2"
edition = "2021"

authors.workspace = true
homepage.workspace = true

[dependencies]
image = { version = "0.24.6", features = ["png"], default-features = false }
thiserror = "1.0.40"
ears-rs = { path = "../../ears-rs" }
rayon = { version = "1.7.0", optional = true }
vfs = { version = "0.9.0" }
serde = { version = "1.0.163", features = ["derive"], optional = true }
either = "1.8.1"
tracing = "0.1.37"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
parallel_iters = ["dep:rayon"]
serializable_parts = ["dep:serde"]
ears = []