[package]
name = "nmsr-lib"
version = "0.2.2"
edition = "2021"

authors.workspace = true
homepage.workspace = true

[dependencies]
image = { workspace = true, default-features = false, features = ["png"]}
qoi = "0.4"
thiserror = { workspace = true }
ears-rs = { workspace = true }
rayon = { version = "1.10", optional = true }
vfs = { version = "0.12" }
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.8.3", optional = true }
either = "1.13"
tracing = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
parallel_iters = ["dep:rayon"]
serializable_parts = ["dep:serde"]
serializable_parts_rkyv = ["dep:rkyv"]
ears = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rust-embed = "8.*"
vfs = { version = "0.12", features = ["embedded-fs"] }

[[bench]]
name = "uv_loading"
harness = false

[[bench]]
name = "uv_renderer"
harness = false
