[package]
name = "nmsr-player-parts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ears-rs = { git = "https://github.com/NickAcPT/ears-rs", optional = true }
thiserror = "1.0.44"
glam = "0.24.1"
strum = { version = "0.25", features = ["derive"] }
itertools = { version = "0.11.0", optional = true }
paste = "1.0.14"

[features]
default = []
part_tracker = []
ears = ["dep:ears-rs",  "dep:itertools"]
