[package]
name = "nmsr-player-parts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ears-rs = { workspace = true, optional = true }
thiserror = { workspace = true }
glam = { workspace = true }
strum = { workspace = true }
itertools = { workspace = true, optional = true }
paste = { workspace = true }

[features]
default = []
part_tracker = []
markers = ["part_tracker"]
ears = ["dep:ears-rs", "dep:itertools"]
