[package]
name = "nmsr-rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
nmsr-player-parts = { path = "../nmsr-player-parts" }
image = { workspace = true, default-features = false }
tokio = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
deadpool = "0.9.5"
async-trait = { workspace = true }
derive_more = { workspace = true }
smaa = "0.10.1"

[features]
default = []
part_tracker = ["nmsr-player-parts/part_tracker"]
ears = ["nmsr-player-parts/ears"]
