[package]
name = "nmsr-wgpu-windowed"
version = "0.1.0"
edition = "2021"

[dependencies]
nmsr-rendering = { path = "../nmsr-rendering" }
nmsr-player-parts = { path = "../nmsr-player-parts" }
bytemuck = "1.13.1"
winit = "0.28.6"
wgpu = "0.17.0"
tokio = { version = "1.29.1", features = ["full"] }
renderdoc = { version = "0.11.0",features = ["ci"] }
egui = { version = "0.22.0", features = ["bytemuck"] }
egui_wgpu_backend = "0.25.0"
egui_winit_platform = "0.19.0"
strum = "0.25.0"