[package]
name = "nmsr-wgpu-windowed"
version = "0.1.0"
edition = "2021"

[dependencies]
nmsr-rendering = { path = "../nmsr-rendering" }
nmsr-player-parts = { path = "../nmsr-player-parts" }
bytemuck = "1.13.1"
winit = "0.28.6"
wgpu = { workspace = true }
tokio = { workspace = true, features = ["full"] }
renderdoc = { version = "0.11.0",features = ["ci"] }
egui = { version = "0.23.0", features = ["bytemuck"] }
egui_wgpu_backend = "0.27.0"
egui_winit_platform = "0.20.0"

strum = { workspace = true }
image = { workspace = true, default-features = false }
ears-rs = { git = "https://github.com/NickAcPT/ears-rs" }

libloader = "0.1.4"
anyhow = { workspace = true }

[features]
default = []
ears = ["nmsr-player-parts/ears"]