[package]
name = "nmsr-parts-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
anyhow = "1.0.66"
image = { version = "0.24.5", features = ["png"], default-features = false }
nmsr-lib = { path = "../../nmsr-lib" }
rayon = { version = "1.5.3" }