[package]
name = "nmsr-parts-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
anyhow = "1.0.72"
image = { version = "0.24.6", features = ["png"], default-features = false }
nmsr-lib = { path = "../../nmsr-lib" }
rayon = { version = "1.7.0" }
itertools = "0.11.0"