[package]
name = "nmsr-rendering-blockbench-model-generator-experiment"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
image = { workspace = true, default-features = false, features = ["png"] }
itertools = { workspace = true }
nmsr-rendering = { version = "0.1.0", path = "../../nmsr-3d-renderer/nmsr-rendering", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version = "0.6.0", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1.0.0-beta.3", features = ["deref", "debug"] }
ears-rs = { git = "https://github.com/NickAcPT/ears-rs" }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
glam = { workspace = true, features = ["serde"] }
base64 = "0.21.4"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[features]
default = ["nmsr-rendering/part_tracker"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
ears = ["nmsr-rendering/ears"]
markers = ["nmsr-rendering/markers"]
