[package]
name = "nmsr-rendering-blockbench-model-generator-experiment"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
image = { workspace = true, default-features = false, features = ["png"] }
itertools = { workspace = true }
nmsr-rendering = { version = "0.1.0", path = "../../nmsr-3d-renderer/nmsr-rendering", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
clap = { version = "4", features = ["derive"] }
derive_more = { workspace = true, features = ["deref", "debug"] }
ears-rs = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"]}
glam = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[features]
default = ["nmsr-rendering/part_tracker"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
ears = ["nmsr-rendering/ears"]
markers = ["nmsr-rendering/markers"]
