[package]
name = "nmsr-rendering-parts-generator-experiment"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.13.1"
image = { workspace = true, default-features = false }
qoi = "0.4"
itertools = "0.11.0"
nmsr-rendering = { version = "0.1.0", path = "../../nmsr-3d-renderer/nmsr-rendering" }
pollster = {version = "0.3.0", features = ["macro"] }
async-recursion = "1.0.5"

[features]
default = []
ears = ["nmsr-rendering/ears"]