[package]
name = "nmsr-skin-template-generator-experiment"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true

[dependencies]
ears-rs = { workspace = true }
nmsr-player-parts = { path = "../../nmsr-3d-renderer/nmsr-player-parts", features = [
] }
itertools = { workspace = true }
image = { workspace = true, default-features = false, features = ["png"] }
anyhow = { version = "1" }
rand = { version = "0.8" }
glam = { workspace = true }
hsl = "0"
strum = { workspace = true }

[features]
ears = ["nmsr-player-parts/ears"]